Adicionado novas naturezas de depositantes

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -285,3 +285,7 @@ choose.file=Choose the file
 help.upload=Select a new file to be added to the patent
 help.delete=To upload a new file you must delete the current one
 save.apply=Save and Apply
+foreign.university=Foreign University
+private.fostering=Private Fostering
+federal.fostering=Federal Fostering
+local.fostering=Local Fostering
