--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -286,3 +286,7 @@ choose.file=Escolha o arquivo
 help.upload=Selecione um novo arquivo para adicionar a patente
 help.delete=Para fazer o upload de um novo arquivo voc\u00ea deve deletar o arquivo atual
 save.apply=Salvar e Aplicar
+foreign.university=Universidade Estrangeira
+private.fostering=Fomento Privado
+federal.fostering=Fomento Federal
+local.fostering=Fomento Local
