Layout da maioria das paginas modificado.

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -197,9 +197,9 @@ harmonized.name=Harmonized Name
 #Estado
 state=State
 #Nome selecionado
-selected.names=Selected Names
+selected.names=User Selected Names
 #Sugest\u00f5es
-sugestions=Sugestions
+sugestions=System Sugestions
 #N\u00e3o existem sugest\u00f5es
 no.sugestions=No sugestions available
 #Criar Regra
@@ -292,3 +292,6 @@ local.fostering=Local Fostering
 technological.profile.inventor=Technological Profile by Inventor
 classification.inventor=Number of Classifications per Inventor
 applicant.type=Applicant Type
+filters=Filters
+item.number=Number of Itens
+patent.list=List of Patents in the Project
