--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -19,7 +19,7 @@ download.file=Download Folha de Rosto
 download.patent=Download Arquivo da Patente
 import.patent=Importar Patentes
 edit.patent=Editando patente:
-language=L\u00edngua
+language=Idioma
 applicants=Depositantes
 inventors=Inventores
 application.number=N\u00famero de Dep\u00f3sito
@@ -123,8 +123,8 @@ docsOfNationalPriority=Docs de Prioridade Nacional
 noneDocBrazilian=Nenhum documento registrado com prioridade nacional
 technologicalProfile=Perfil Tecnol\u00f3gico
 natureDepositor=Natureza do depositante
-stateDistribuition=Distribui\u00e7ao por Estado
-regionDistribuition=Distribui\u00e7ao Regional
+stateDistribuition=Distribui\u00e7\u00e3o por Estado
+regionDistribuition=Distribui\u00e7\u00e3o Regional
 nature=Natureza
 #Editing User
 editing.user=Editando Usu\u00e1rio
@@ -197,9 +197,9 @@ harmonized.name=Nome harmonizado
 #Estado
 state=Estado
 #Nome selecionado
-selected.names=Nomes selecionados
+selected.names=Nomes selecionados pelo Usu\u00e1rio
 #Sugest\u00f5es
-sugestions=Sugest\u00f5es
+sugestions=Sugest\u00f5es do Sistema
 #N\u00e3o existem sugest\u00f5es
 no.sugestions=N\u00e3o existem sugest\u00f5es
 #Criar Regra
@@ -277,7 +277,7 @@ contains=Cont\u00e9m
 filter.type=Tipo de Filtro
 developed.by=Desenvolvido pelo grupo TIPI do Instituto de Computa\u00e7\u00e3o da UFMT
 applicants.number=N\u00famero de Aplicantes
-create.patent=Adicionando Patente
+create.patent=Adicionar Patente
 add.patent=Adicionar patente
 publication.number=N\u00famero de Publica\u00e7\u00e3o
 obligatory.field=\u00e9 obrigat\u00f3rio
@@ -293,3 +293,6 @@ local.fostering=Fomento Local
 technological.profile.inventor=Perfil Tecnol\u00f3gico por Inventor
 classification.inventor=N\u00famero de Classifica\u00e7\u00f5es por Inventor
 applicant.type=Natureza do Depositante
+filters=Filtros
+item.number=N\u00famero de Itens no Gr\u00e1fico
+patent.list=Lista de Patentes no Projeto
