Sugestões de depositante e inventores na listagem das regras, adicionado botão pra aplicar todas as regras, além de mudança dos botões na adição e edição

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -295,3 +295,8 @@ applicant.type=Applicant Type
 filters=Filters
 item.number=Number of Itens
 patent.list=List of Patents in the Project
+show=Show
+new.priority=New priority
+new.applicant=New applicant
+new.inventor=New inventor
+apply.all=Apply all rules
