--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -296,3 +296,8 @@ applicant.type=Natureza do Depositante
 filters=Filtros
 item.number=N\u00famero de Itens no Gr\u00e1fico
 patent.list=Lista de Patentes no Projeto
+show=Mostrar
+new.priority=Nova prioridade
+new.applicant=Novo depositante
+new.inventor=Novo inventor
+apply.all=Aplicar todas regras
