--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -93,7 +93,7 @@ about=About
 description.about=Periscope is a result of the effort made by the Institute of Computing - UFMT, the main goal is provide to the brazilian community a tool that assists the utilization of the information contained in the Industrial Property System.
 credits=Credits
 project.manager=<h4>Project Coordination</h4>
-manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
+manager.project=<ul><li>Josiel Maimone de Figueiredo - josiel@ic.ufmt.br</li> <li>Jeziel da Silva Nunes - jezielnunes@gmail.com (CEFET-RJ)</li></ul> 
 project.development=<h4>Development</h4>
 developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Cristhian Ferreira</li> <li>Mattyws Ferreira Grawe</li> </ul>
 project.contribution=<h4>Contribution</4>
@@ -106,7 +106,7 @@ espacenet.help=Para importar patentes da base ESPACENET<br>fa\u00e7a uma pesquis
 dpma.help=Para importar patentes da base DPMA fa\u00e7a uma pesquisa atrav\u00e9s do link.<br>Ap\u00f3s isso clique em "CSV" (Pr\u00f3ximo ao "DOWNLOAD RESULT LIST") para fazer o download do arquivo.
 project.help=<strong>Privados</strong><br>Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.<br><strong>P\u00fablicos</strong><br>Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas<br>o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o<br><strong>Compartilhados</strong><br>Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e<br>poder de exclus\u00e3o/edi\u00e7\u00e3o<strong>P\u00fablico e Compartilhado</strong><br>O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem<br>acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do<br>projeto podem editar/ecluir o projeto<br><strong>Privado e Compartilhado</strong><br>O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os<br>usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder<br>de exclus\u00e3o/edi\u00e7\u00e3o
 user.help=\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o<br>cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o<br>dono do projeto e portanto j\u00e1 est\u00e1 incluso.
-build.value=build 20141125
+build.value=build 20150211
 private.company=Private Company
 individual=Individual
 private.university=Private University
@@ -259,7 +259,7 @@ no.brazilian=None brazilian patents
 #Regi\u00e3o
 region=Region
 #Distribui\u00e7\u00e3o por estado
-state.distribuition=Distribuition per state
+state.distribuition=Distribuition per State
 #Numero de patentes por estado
 patents.state=Number of patents per state
 #Usu\u00e1rios
@@ -300,3 +300,7 @@ new.priority=New priority
 new.applicant=New applicant
 new.inventor=New inventor
 apply.all=Apply all rules
+priorities.number=Number of prioritiy documents
+applications.number=Applications Number
+publications.year=Published Documents Number
+back=Back
