--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -93,7 +93,7 @@ about=Sobre
 description.about=O Periscope \u00e9 resultado do esfor\u00e7o realizado pelo Instituto de Computa\u00e7\u00e3o - UFMT, e tem como objetivo principal disponibilizar para a comunidade brasileira uma ferramenta que auxilia a utiliza\u00e7\u00e3o das informa\u00e7\u00f5es contidas no Sistema de Propriedade Industrial.
 credits=Cr\u00e9ditos
 project.manager=<h4>Coordena\u00e7\u00e3o do Projeto</h4>
-manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
+manager.project=<ul><li>Josiel Maimone de Figueiredo - josiel@ic.ufmt.br</li> <li>Jeziel da Silva Nunes - jezielnunes@gmail.com (CEFET-RJ)</li></ul> 
 project.development=<h4>Desenvolvimento</h4>
 developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Cristhian Ferreira</li> <li>Mattyws Ferreira Grawe</li> </ul>
 project.contribution=<h4>Contribui\u00e7\u00f5es</h4>
@@ -106,7 +106,7 @@ espacenet.help=Para importar patentes da base ESPACENET<br>fa\u00e7a uma pesquis
 dpma.help=Para importar patentes da base DPMA fa\u00e7a uma pesquisa atrav\u00e9s do link.<br>Ap\u00f3s isso clique em "CSV" (Pr\u00f3ximo ao "DOWNLOAD RESULT LIST") para fazer o download do arquivo.
 project.help=<strong>Privados</strong><br>Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.<br><strong>P\u00fablicos</strong><br>Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas<br>o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o<br><strong>Compartilhados</strong><br>Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e<br>poder de exclus\u00e3o/edi\u00e7\u00e3o<strong>P\u00fablico e Compartilhado</strong><br>O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem<br>acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do<br>projeto podem editar/ecluir o projeto<br><strong>Privado e Compartilhado</strong><br>O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os<br>usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder<br>de exclus\u00e3o/edi\u00e7\u00e3o
 user.help=\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o<br>cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o<br>dono do projeto e portanto j\u00e1 est\u00e1 incluso.
-build.value=build 20141125
+build.value=build 20150211
 private.company=Empresa Privada
 individual=Pessoa F\u00edsica
 private.university=Universidade Privada
@@ -259,7 +259,7 @@ no.brazilian=Nenhuma patente brasileira
 #Regi\u00e3o
 region=Regi\u00e3o
 #Distribui\u00e7\u00e3o por estado
-state.distribuition=Distribui\u00e7\u00e3o por estado
+state.distribuition=Distribui\u00e7\u00e3o por Estado
 #Numero de patentes por estado
 patents.state=N\u00famero de patentes por estado
 #Usu\u00e1rios
@@ -301,3 +301,7 @@ new.priority=Nova prioridade
 new.applicant=Novo depositante
 new.inventor=Novo inventor
 apply.all=Aplicar todas regras
+priorities.number=N\u00famero de Documentos com Prioridades
+applications.number=N\u00famero de Dep\u00f3sitos
+publications.year=N\u00famero de Documentos Publicados
+back=Voltar
