--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -304,3 +304,4 @@ priorities.number=Number of prioritiy documents
 applications.number=Applications Number
 publications.year=Published Documents Number
 back=Back
+saving.overwrite=Saving this rule will overwrite an existing rule
