--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -305,3 +305,4 @@ priorities.number=N\u00famero de Documentos com Prioridades
 applications.number=N\u00famero de Dep\u00f3sitos
 publications.year=N\u00famero de Documentos Publicados
 back=Voltar
+saving.overwrite=Salvar esta regra ir\u00e1 sobrescrever uma regra existente
