Desfazer regra funcional, mas não deleta regra ao desfaze-la

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -305,3 +305,4 @@ applications.number=Applications Number
 publications.year=Published Documents Number
 back=Back
 saving.overwrite=Saving this rule will overwrite an existing rule
+undo=Undo
