--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -306,3 +306,4 @@ applications.number=N\u00famero de Dep\u00f3sitos
 publications.year=N\u00famero de Documentos Publicados
 back=Voltar
 saving.overwrite=Salvar esta regra ir\u00e1 sobrescrever uma regra existente
+undo=Desfazer
