Pequenas mudanças descritas nas atividades #459, #460, #461, #463, #464 do redmine

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -307,3 +307,4 @@ back=Back
 saving.overwrite=Saving this rule will overwrite an existing rule
 undo=Undo
 undo.delete=Undo and Delete
+foreign.company=Foreign Company
