--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -308,3 +308,4 @@ back=Voltar
 saving.overwrite=Salvar esta regra ir\u00e1 sobrescrever uma regra existente
 undo=Desfazer
 undo.delete=Desfazer e Deletar
+foreign.company=Empresa Estrangeira
