Corrigido problema do filtro na harmonização não mostrar todos resultados

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -312,3 +312,4 @@ show.docs=Show Documents
 no.docs=No Documents
 inventor.docs=Inventor's Documents
 applicant.docs=Applicant's Documents
+edit.rule=Editing Rule
