--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -313,3 +313,4 @@ show.docs=Mostrar Documentos
 no.docs=Nenhum Documento
 inventor.docs=Documentos do Inventor
 applicant.docs=Documentos do Depositante
+edit.rule=Editando Regra
