--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -313,3 +313,10 @@ no.docs=No Documents
 inventor.docs=Inventor's Documents
 applicant.docs=Applicant's Documents
 edit.rule=Editing Rule
+harmonized=Harmonized
+alredy.harmonized=alredy harmonized
+applicant=Applicant
+must.select=must select one to update
+original.information=Original Information
+obligatory.fields=Obligatory fields
+inventor=Inventor
