--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -314,3 +314,10 @@ no.docs=Nenhum Documento
 inventor.docs=Documentos do Inventor
 applicant.docs=Documentos do Depositante
 edit.rule=Editando Regra
+harmonized=Harmonizado
+alredy.harmonized=j\u00e1 harmonizado
+applicant=Depositante
+must.select=deve selecionar um para atualizar
+original.information=Informa\u00e7\u00e3o Original
+obligatory.fields=Campos obrigat\u00f3rios
+inventor=Inventor
