--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -245,7 +245,7 @@ classification.applicant=N\u00famero de Classifica\u00e7\u00f5es por Depositante
 #Nenhuma natureza cadastrada
 no.nature=Nenhuma natureza cadastrada
 #Pa\u00edses com maior prioridade
-higher.priority=Pa\u00edses com maior prioridade
+higher.priority=Pa\u00edses de maior prioridade
 #Publica\u00e7\u00f5es
 publications=Publica\u00e7\u00f5es
 #N\u00famero de publica\u00e7\u00f5es por ano
@@ -321,3 +321,4 @@ must.select=deve selecionar um para atualizar
 original.information=Informa\u00e7\u00e3o Original
 obligatory.fields=Campos obrigat\u00f3rios
 inventor=Inventor
+classification.system=Sistema de Classifica\u00e7\u00e3o
