Javadocs das classes controllers adicionadas e/ou traduzidas para português; Refatorado o PatentController para funcionar melhor com CDI; Alguns detalhes de layout mudados na lista de patentes; Reformulada a página de edição e adição de patentes.

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -321,3 +321,7 @@ original.information=Original Information
 obligatory.fields=Obligatory fields
 inventor=Inventor
 classification.system=Classification System
+download=Download
+unlink=Unlink
+action=Action
+no.file=No file uploaded yet, press the button to upload a new one
