--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -15,8 +15,8 @@ add.inventor=Adicionar Inventor
 add.priority=Adicionar Prioridade
 add=Adicionar
 header=Cabe\u00e7alho
-download.file=Download Folha de Rosto
-download.patent=Download Arquivo da Patente
+download.file=Baixar Folha de Rosto
+download.patent=Baixar Arquivo da Patente
 import.patent=Importar Patentes
 edit.patent=Editando patente:
 language=Idioma
@@ -322,3 +322,7 @@ original.information=Informa\u00e7\u00e3o Original
 obligatory.fields=Campos obrigat\u00f3rios
 inventor=Inventor
 classification.system=Sistema de Classifica\u00e7\u00e3o
+download=Baixar
+unlink=Desvincular
+action=A\u00e7\u00e3o
+no.file=Nenhum arquivo existente, use o botao para subir um novo arquivo
