Adicionado mensagens de auxílio na página de importação

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -218,6 +218,12 @@ no.rules=No rules
 substitutions=Substitutions
 #Tem certeza ?
 you.sure=Are you sure?
+#Passo 1 - Importacao de dados
+step.one=Choose the origin of the files you wish to import.
+#Passo 2 - Importacao de dados
+step.two=Choose the files from your computer you wish to add to the project and click on 'Upload All'.
+#Passo 3 - Importacao de dados
+step.three=Click on 'Import'.
 #Importar dados
 import.data=Import data
 #Escolha o arquivo
@@ -294,7 +300,7 @@ classification.inventor=Number of Classifications per Inventor
 applicant.type=Applicant Type
 filters=Filters
 item.number=Number of Itens
-patent.list=List of Patents in the Project
+patent.list=List of Documents in the Project
 show=Show
 new.priority=New priority
 new.applicant=New applicant
@@ -325,3 +331,4 @@ download=Download
 unlink=Unlink
 action=Action
 no.file=No file uploaded yet, press the button to upload a new one
+next=Next
