--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -218,6 +218,12 @@ no.rules=N\u00e3o existem regras
 substitutions=Substitui\u00e7\u00f5es
 #Tem certeza ?
 you.sure=Tem certeza ?
+#Passo 1 - Importacao de dados
+step.one=Escolha a origem dos arquivos que deseja importar.
+#Passo 2 - Importacao de dados
+step.two=Escolha os arquivos de seu computador que deseja adcionar no projeto e clique em 'Enviar Arquivos'.
+#Passo 3 - Importacao de dados
+step.three=Clique em 'Importar'.
 #Importar dados
 import.data=Importar dados
 #Escolha os arquivo
@@ -295,7 +301,7 @@ classification.inventor=N\u00famero de Classifica\u00e7\u00f5es por Inventor
 applicant.type=Natureza do Depositante
 filters=Filtros
 item.number=N\u00famero de Itens no Gr\u00e1fico
-patent.list=Lista de Patentes no Projeto
+patent.list=Lista de Documentos no Projeto
 show=Mostrar
 new.priority=Nova prioridade
 new.applicant=Novo depositante
@@ -326,3 +332,4 @@ download=Baixar
 unlink=Desvincular
 action=A\u00e7\u00e3o
 no.file=Nenhum arquivo existente, use o botao para subir um novo arquivo
+next=Proximo
