Sobrecarga não era necessária e correção de mensagem

--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -221,7 +221,7 @@ you.sure=Tem certeza ?
 #Passo 1 - Importacao de dados
 step.one=Escolha a origem dos arquivos que deseja importar.
 #Passo 2 - Importacao de dados
-step.two=Escolha os arquivos de seu computador que deseja adcionar no projeto e clique em 'Enviar Arquivos'.
+step.two=Escolha os arquivos de seu computador que deseja adicionar no projeto e clique em 'Enviar Arquivos'.
 #Passo 3 - Importacao de dados
 step.three=Clique em 'Importar'.
 #Importar dados
